--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 50px;
+  margin-top: 1rem;
   /* border: 1px red dotted; */
 }
 
